# mecagent-technical-test

./: .gitignore  config.py  pyproject.toml
wandb/run-20250710_020251-4uqcl5i7/: run-4uqcl5i7.wandb
wandb/run-20250710_020251-4uqcl5i7/files/: config.yaml  wandb-metadata.json
wandb/run-20250710_020510-5ss4hntk/: run-5ss4hntk.wandb
wandb/run-20250710_020510-5ss4hntk/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250710_023320-fbufsz1n/: run-fbufsz1n.wandb
wandb/run-20250710_023320-fbufsz1n/files/: config.yaml  wandb-metadata.json
wandb/run-20250710_023457-rs0gickl/: run-rs0gickl.wandb
wandb/run-20250710_023457-rs0gickl/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20250710_023919-fjwn8g5c/: run-fjwn8g5c.wandb
wandb/run-20250710_023919-fjwn8g5c/files/: wandb-metadata.json
